--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 			Click a hyperlink below to see other pages
 		</h3>
 		<h4>
-			<a href="hydronesiumScratch.github.io/contributorsindex.html">
+			<a href="contributorsindex.html">
 				Contributors
 			</a>
 	</body>
