--- a/contributorsindex.html
+++ b/contributorsindex.html
@@ -1,3 +1,17 @@
 <html>
   <head>
+    hydronesium - Contributors
+  </head>
+  <body>
+    <h1>
+			Contributors
+		</h1>
+    <h3>
+      Here is the list of people who contributed to this website:
+    </h3>
+    <h4>
+      hydronesium
+      Aaand thats it, really... (I'm so sad, aren't I?)
+    </h4>
+  </body>
 </html>
