Add datachart.html to index.html

--- a/index.html
+++ b/index.html
@@ -15,5 +15,8 @@
 			<a href="contributorsindex.html">
 				Contributors
 			</a>
+			<a href="Datachart.html">
+				Data chart
+			</a>
 	</body>
 </html>
