Changed the contributors bug

--- a/contributorsindex.html
+++ b/contributorsindex.html
@@ -10,7 +10,7 @@
       Here is the list of people who contributed to this website:
     </h3>
     <h4>
-      hydronesium
+      hydronesium <p>
       Aaand thats it, really... (I'm so sad, aren't I?)
     </h4>
   </body>
