--- a/contributorsindex.html
+++ b/contributorsindex.html
@@ -1,1 +1,17 @@
-
+<html>
+  <head>
+    hydronesium - Contributors
+  </head>
+  <body>
+    <h2>
+			Contributors
+		</h2>
+    <h3>
+      Here is the list of people who contributed to this website:
+    </h3>
+    <h4>
+      hydronesium <p>
+      Aaand thats it, really... (I'm so sad, aren't I?)
+    </h4>
+  </body>
+</html>
