--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
 			hydronesium - Home
 		</title>
 	</head>
+	<style>
+		body {
+			background-color: #222222
+			color: #eeeeee
+		}
+	</style>
 	<body>
 		<h1>
 			Welcome to hydronesium's website
