--- a/index.html
+++ b/index.html
@@ -6,8 +6,28 @@
 	</head>
 	<style>
 		body {
-			background-color: #222222
-			color: #eeeeee
+			background-color: #222222;
+			color: #eeeeee;
+		}
+		
+		/* unvisited link */
+		a:link {
+		    color: #cccc00;
+		}
+		
+		/* visited link */
+		a:visited {
+		    color: #999900;
+		}
+		
+		/* mouse over link */
+        	a:hover {
+		    color: #0000dd;
+		}
+		
+		/* selected link */
+		a:active {
+		    color: #006400;
 		}
 	</style>
 	<body>
