Colour to links changed

--- a/contributorsindex.html
+++ b/contributorsindex.html
@@ -1,7 +1,35 @@
 <html>
   <head>
-    hydronesium - Contributors
+      <title>  
+	  		hydronesium - Contributors
+	  	</title>
   </head>
+  <style>
+		body {
+			background-color: #222222;
+			color: #eeeeee;
+		}
+		
+		/* unvisited link */
+		a:link {
+		    color: #cccc00;
+		}
+		
+		/* visited link */
+		a:visited {
+		    color: #999900;
+		}
+		
+		/* mouse over link */
+        	a:hover {
+		    color: #0000dd;
+		}
+		
+		/* selected link */
+		a:active {
+		    color: #006400;
+		}
+	</style>
   <body>
     <h2>
 			Contributors
