--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 			Click a hyperlink below to see other pages
 		</h3>
 		<h4>
-			<a href="contributorsindex.html">
+			<a href="contributors/">
 				Contributors
 			</a>
 			<p>
