--- a/contributors/index.html
+++ b/contributors/index.html
@@ -38,8 +38,9 @@
       Here is the list of people who contributed to this website:
     </h3>
     <h4>
-      hydronesium <p>
-      Aaand thats it, really... (I'm so sad, aren't I?)
+      - hydronesium <p>
+      - jimbob123x <p>
+      - Aaand thats it, really... (I'm so sad, aren't I?)
     </h4>
   </body>
 </html>
