--- a/contributors/index.html
+++ b/contributors/index.html
@@ -38,8 +38,8 @@
       Here is the list of people who contributed to this website:
     </h3>
     <h4>
-      - hydronesium <p>
-      - jimbob123x <p>
+      - hydronesium (To view their website, click <a href="https://hydronesiumscratch.github.io">here</a>.) <p>
+      - jimbob123x (To view their website, click <a href="https://scratch.mit.edu/users/jimbob123x/">here</a>.) <p>
       - Aaand thats it, really... (I'm so sad, aren't I?)
     </h4>
   </body>
