--- a/contributors/index.html
+++ b/contributors/index.html
@@ -39,7 +39,7 @@
     </h3>
     <h4>
       - hydronesium (To view their website, click <a href="https://hydronesiumscratch.github.io" target="_blank">here</a>.) <p>
-      - jimbob123x (To view their website, click <a href="https://scratch.mit.edu/users/jimbob123x/ target="_blank">here</a>.) <p>
+      - jimbob123x (To view their website, click <a href="https://scratch.mit.edu/users/jimbob123x/" target="_blank">here</a>.) <p>
       - Aaand thats it, really... (I'm so sad, aren't I?)
     </h4>
   </body>
