Added genys.is to index

--- a/index.html
+++ b/index.html
@@ -45,5 +45,10 @@
 			<a href="datachart/">
 				Data chart
 			</a>
+			<p>
+			<a href="Genys.is/">
+				Genys.is
+			</a>
+		</h4>
 	</body>
 </html>
