--- a/index.html
+++ b/index.html
@@ -45,6 +45,10 @@
 			<a href="datachart/">
 				Data chart
 			</a>
+			<p>
+ 			<a href="Genys.is/src/client/">
+ 				Genys.is
+ 			</a>
 		</h4>
 	</body>
 </html>
