--- a/Genys.is/src/client/index.html
+++ b/Genys.is/src/client/index.html
@@ -3,7 +3,7 @@
 <head>
     <!-- Meta Properties -->
     <meta charset="UTF-8">
-    <title>Genys.is</title>
+    <title>hydronesium - Genys.is</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
     <!-- CSS -->
     <link rel="stylesheet" href="css/main.css" />
@@ -28,7 +28,7 @@
         <div id="startMenu">
             <p>Genys.is</p>
             <input type="text" tabindex="0" autofocus placeholder="Nickname" id="playerNameInput" maxlength="30" />
-            <b class="input-error">Nick must be alphanumeric characters only!</b>
+            <b class="input-error">Nickname must be alphanumeric characters only!</b>
             <br />
             <a onclick="document.getElementById('spawn_cell').play();"><button id="startButton">Start!</button></a>
             <div class="skin-select" id="skin-select">
