Update 3D maze hyperlink

--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
 				Data chart
 			</a>
 			<p>
- 			<a href="Genys.is/src/client/">
- 				Genys.is
+ 			<a href="3D maze">
+ 				3D maze
  			</a>
 		</h4>
 	</body>
