--- a/contributors/index.html
+++ b/contributors/index.html
@@ -41,7 +41,7 @@
       - hydronesium (To view their website, click <a href="https://hydronesiumscratch.github.io" target="_blank">here</a>.) <p>
       - jimbob123x (To view their scratch account, click <a href="https://scratch.mit.edu/users/jimbob123x/" target="_blank">here</a>.) <p>
       - EdJonez (To view their website, click <a href="https://example.com" target="_blank">here</a>.) <p>
-      - Aaand thats it, really... (I'm so sad, aren't I?)
+      - TomIsTheBestAtEverything(WhichIncludesDragons) (To view their website, click <a href="https://example.com" target="_blank">here</a>.) <p>
     </h4>
   </body>
 </html>
