--- a/contributors/index.html
+++ b/contributors/index.html
@@ -31,17 +31,19 @@
 		}
 	</style>
   <body>
-    <h2>
+	<center>
+    		<h1>
 			Contributors
-		</h2>
-    <h3>
-      Here is the list of people who contributed to this website:
-    </h3>
-    <h4>
-      - hydronesium (To view their website, click <a href="https://hydronesiumscratch.github.io" target="_blank">here</a>.) <p>
-      - jimbob123x (To view their scratch account, click <a href="https://scratch.mit.edu/users/jimbob123x/" target="_blank">here</a>.) <p>
-      - EdJonez (To view their website, click <a href="https://example.com" target="_blank">here</a>.) <p>
-      - TomIsTheBestAtEverything(WhichIncludesDragons) (To view their website, click <a href="https://example.com" target="_blank">here</a>.) <p>
-    </h4>
+		</h1>
+    		<h3>
+      			Here is the list of people who contributed to this website:
+    		</h3>
+    		<h4>
+      			- hydronesium (To view their website, click <a href="https://hydronesiumscratch.github.io" target="_blank">here</a>.) <p>
+      			- jimbob123x (To view their scratch account, click <a href="https://scratch.mit.edu/users/jimbob123x/" target="_blank">here</a>.) <p>
+      			- EdJonez (To view their website, click <a href="https://example.com" target="_blank">here</a>.) <p>
+      			- TomIsTheBestAtEverything(WhichIncludesDragons) (To view their website, click <a href="https://example.com" target="_blank">here</a>.) <p>
+    		</h4>
+	<center>
   </body>
 </html>
