--- a/index.html
+++ b/index.html
@@ -31,20 +31,22 @@
 		}
 	</style>
 	<body>
-		<h1>
-			Welcome to hydronesium's website
-		</h1>
-		<h3>
-			Click a hyperlink below to see other pages
-		</h3>
-		<h4>
-			<a href="contributors/">
-				Contributors
-			</a>
-			<p>
-			<a href="datachart/">
-				Data chart
-			</a>
-		</h4>
+		<center>
+			<h1>
+				Welcome to hydronesium's website
+			</h1>
+			<h3>
+				Click a hyperlink below to see other pages
+			</h3>
+			<h4>
+				<a href="contributors/">
+					Contributors
+				</a>
+				<p>
+				<a href="datachart/">
+					Data chart
+				</a>
+			</h4>
+		</center>
 	</body>
 </html>
