--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 				Welcome to hydronesium's website
 			</h1>
 			<h3>
-				Click a hyperlink below to see other pages
+				Click a hyperlink below to see other, closely linked, pages.
 			</h3>
 			<h4>
 				<a href="contributors/">
