--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 	</style>
 	<body>
 		<center>
+			<img src="H.png" alt="The hydronesium logo">
 			<h1>
 				Welcome to hydronesium's website
 			</h1>
