--- a/index.html
+++ b/index.html
@@ -33,21 +33,26 @@
 	<body>
 		<center>
 			<img src="H.png" alt="The hydronesium logo">
-			<h1>
-				Welcome to hydronesium's website
-			</h1>
-			<h3>
-				Click a hyperlink below to see other, closely linked, pages.
-			</h3>
-			<h4>
-				<a href="contributors/">
-					Contributors
-				</a>
-				<p>
-				<a href="datachart/">
-					Data chart
-				</a>
-			</h4>
+			<div class="img-with-text">
+    				<img src="yourimage.jpg" alt="sometext" />
+    				<p>
+					<h1>
+						Welcome to hydronesium's website
+					</h1>
+					<h3>
+						Click a hyperlink below to see other, closely linked, pages.
+					</h3>
+					<h4>
+						<a href="contributors/">
+							Contributors
+						</a>
+						<p>
+						<a href="datachart/">
+							Data chart
+						</a>
+					</h4>
+				</p>
+			</div>
 		</center>
 	</body>
 </html>
