--- a/index.html
+++ b/index.html
@@ -32,9 +32,8 @@
 	</style>
 	<body>
 		<center>
-			<img src="H.png" alt="The hydronesium logo">
 			<div class="img-with-text">
-    				<img src="yourimage.jpg" alt="sometext" />
+    				<img src="H.png" alt="The hydronesium logo" />
     				<p>
 					<h1>
 						Welcome to hydronesium's website
