--- a/datachart/index.html
+++ b/datachart/index.html
@@ -555,4 +555,5 @@
 <table cellspacing="0" cellpadding="0" width="800" border="0">
   <tbody>
   <tr>
-    <td>&nbsp;</td></tr></tbody></table></body></html>
+    <td>&nbsp;</td></tr></tbody></table></body>
+</html>
