Update index for game

--- a/Game/index.html
+++ b/Game/index.html
@@ -7,6 +7,30 @@
             border:1px solid #d3d3d3;
             background-color: #f1f1f1;
         }
+		body {
+			background-color: #222222;
+			color: #eeeeee;
+		}
+		
+		/* unvisited link */
+		a:link {
+		    color: #cccc00;
+		}
+		
+		/* visited link */
+		a:visited {
+		    color: #999900;
+		}
+		
+		/* mouse over link */
+        	a:hover {
+		    color: #0000dd;
+		}
+		
+		/* selected link */
+		a:active {
+		    color: #006400;
+		}
       </style>
   </head>
   <body onload="startGame()">
@@ -18,7 +42,7 @@
 
       function startGame() {
           myGamePiece = new component(30, 30, "red", 10, 120);
-          myGamePiece.gravity = 0.05;
+          myGamePiece.gravity = 0.5;
           myScore = new component("30px", "Consolas", "black", 280, 40, "text");
           myGameArea.start();
       }
@@ -26,8 +50,8 @@
       var myGameArea = {
           canvas : document.createElement("canvas"),
           start : function() {
-              this.canvas.width = 480;
-              this.canvas.height = 270;
+              this.canvas.width = 960;
+              this.canvas.height = 540;
               this.context = this.canvas.getContext("2d");
               document.body.insertBefore(this.canvas, document.body.childNodes[0]);
               this.frameNo = 0;
@@ -131,9 +155,9 @@
     </script>
     <br>
     <button onmousedown="accelerate(-0.2)" onmouseup="accelerate(0.05)">
-      ACCELERATE
+      JUMP!
     </button>
-    <p>Use the ACCELERATE button to stay in the air</p>
+    <p>Use the JUMP! button to stay in the air</p>
     <p>How long can you stay alive?</p>
   </body>
 </html>
