--- a/index.html
+++ b/index.html
@@ -45,9 +45,11 @@
 						<a href="contributors/">
 							Contributors
 						</a>
-						<p>
 						<a href="datachart/">
 							Data chart
+						</a>
+						<a href="hydredu/">
+							hydreducation
 						</a>
 					</h4>
 				</p>
