--- a/hydredu/index.html
+++ b/hydredu/index.html
@@ -1,2 +1,50 @@
 <html>
+  	<head>
+		  <title>
+			  hydronesium - hydredu
+		  </title>
+	</head>
+    <style>
+      body {
+        background-color: #222222;
+        color: #eeeeee;
+      }
+
+      /* unvisited link */
+      a:link {
+          color: #cccc00;
+      }
+
+      /* visited link */
+      a:visited {
+          color: #999900;
+      }
+
+      /* mouse over link */
+            a:hover {
+          color: #0000dd;
+      }
+
+      /* selected link */
+      a:active {
+          color: #006400;
+      }
+    </style>
+	<body>
+		<center>
+    			<p>
+				<h1>
+					hydreducation - hydronesium education
+				</h1>
+				<h3>
+					Click a hyperlink below to see other, closely linked, pages.
+				</h3>
+				<h4>
+					<a href="Bio/">
+						Biology
+					</a>
+				</h4>
+			</p>
+		</center>
+	</body>
 </html>
