--- a/Game/index.html
+++ b/Game/index.html
@@ -10,17 +10,29 @@
 				background-color: #222222;
 				color: #eeeeee;
 			}
+		
+			/* unvisited link */
 			a:link {
 			    color: #cccc00;
 			}
+
+			/* visited link */
 			a:visited {
 			    color: #999900;
 			}
+
+			/* mouse over link */
 			a:hover {
 			    color: #0000dd;
 			}
+
+			/* selected link */
 			a:active {
 			    color: #006400;
+			}
+
+			h4 {
+			    background-colour: #555511;
 			}
 		</style>
 	</head>
