--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 	</style>
 	<body>
 		<center>
+			<div data-role="header" data-position="fixed"></div>
 			<div class="img-with-text">
     				<img src="H.png" alt="The hydronesium logo" />
     				<p>
