--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
 		<title>
 			hydronesium - Home
 		</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<link rel="stylesheet" href="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css">
+		<script src="https://code.jquery.com/jquery-1.11.3.min.js">
+		</script>
+		<script src="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js">
+		</script>
 	</head>
 	<style>
 		body {
@@ -60,5 +66,46 @@
 				</p>
 			</div>
 		</center>
+		<div data-role="page" id="pageone">
+  			<div data-role="header">
+    				<h1>Welcome To My Homepage</h1>
+    				<div data-role="navbar">
+      					<ul>
+        					<li><a href="#" class="ui-btn-active ui-state-persist" data-icon="home">Home</a></li>
+        					<li><a href="#pagetwo" data-icon="arrow-r">Page Two</a></li>
+      					</ul>
+    				</div>
+  			</div>
+
+  			<div data-role="main" class="ui-content">
+    				<p>With the ui-btn-active class, notice that the Home button stays highlighted (selected).</p>
+    				<p>Click on the Page Two button to see what happens.</p>
+  			</div>
+
+  			<div data-role="footer">
+    				<h1>My Footer</h1>
+  			</div> 
+		</div> 
+
+		<div data-role="page" id="pagetwo">
+  			<div data-role="header">
+    				<h1>Welcome To My Homepage</h1>
+    				<div data-role="navbar">
+      					<ul>
+        					<li><a href="#pageone" data-icon="home">Home</a></li>
+        					<li><a href="#" class="ui-btn-active ui-state-persist" data-icon="arrow-r">Page Two</a></li>
+      					</ul>
+    				</div>
+  			</div>
+
+  			<div data-role="main" class="ui-content">
+    				<p>This page will also have its button highlighted, because of the ui-btn-active class.</p> 
+    				<p>And if you go back to the "Home" page, you will notice that the state of that page will continue to exist, and vice versa DUE TO THE CLASS UI-STATE-PERSIST!</p>
+	  		</div>
+
+  			<div data-role="footer">
+    				<h1>My Footer</h1>
+  			</div>
+		</div> 
 	</body>
 </html>
