--- a/index.html
+++ b/index.html
@@ -80,6 +80,11 @@
 					JavaScript game
 				</a>
 			</li>
+			  <li>
+				<a href="contributors/">
+					Contributors
+				</a>
+			</li>
 		</ul>
 		<center>
 			<h1>
