--- a/contributors/index.html
+++ b/contributors/index.html
@@ -1,53 +1,71 @@
 <html>
-  <head>
-      <title>  
-	  		hydronesium - Contributors
-	  	</title>
-  </head>
-  <style>
+	  <head>
+	   	<title>  
+			hydronesium - Contributors
+		</title>
+	  </head>
+	  <style>
 		body {
 			background-color: #222222;
 			color: #eeeeee;
 		}
-		
-		/* unvisited link */
 		a:link {
 		    color: #cccc00;
 		}
-		
-		/* visited link */
 		a:visited {
 		    color: #999900;
 		}
-		
-		/* mouse over link */
-        	a:hover {
+		a:hover {
 		    color: #0000dd;
 		}
-		
-		/* selected link */
 		a:active {
 		    color: #006400;
 		}
-		
 		h4 {
 		    background-colour: #555511;
 		}
 	</style>
-  <body>
-	<center>
-    		<h1>
-			Contributors
-		</h1>
-    		<h3>
-      			Here is the list of people who contributed to this website:
-    		</h3>
-    		<h4>
-      			- hydronesium [To view their website, click <a href="https://hydronesiumscratch.github.io" target="_blank">here</a>.] <p>
-      			- jimbob123x [To view their scratch account, click <a href="https://scratch.mit.edu/users/jimbob123x/" target="_blank">here</a>.] <p>
-      			- EdJonez [To view their website, click <a href="https://example.com" target="_blank">here</a>.] <p>
-      			- TomIsTheBestAtEverything(WhichIncludesDragons) [To view their website, click <a href="https://example.com" target="_blank">here</a>.] <p>
-    		</h4>
-	<center>
-  </body>
+	<body>
+		<ul>
+			<li>
+				<a class="active" href="https://hydronesiumscratch.github.io/">
+					Home
+				</a>
+			</li>
+			<li>
+				<a href="datachart/">
+					Data chart
+				</a>
+			</li>
+			<li>
+				<a href="hydredu/">
+					hydreducation
+				</a>
+			</li>
+			<li>
+				<a href="Game/">
+					JavaScript game
+				</a>
+			</li>
+			<li>
+				<a href="contributors/">
+					Contributors
+				</a>
+			</li>
+		</ul>
+		<center>
+			<h1>
+				Contributors
+			</h1>
+			<h3>
+				Here is the list of people who contributed to this website:
+			</h3>
+			<h4>
+				- hydronesium [To view their website, click <a href="https://hydronesiumscratch.github.io" target="_blank">here</a>.] <p>
+				- jimbob123x [To view their scratch account, click <a href="https://scratch.mit.edu/users/jimbob123x/" target="_blank">here</a>.] <p>
+				- EdJonez [To view their website, click <a href="https://example.com" target="_blank">here</a>.] <p>
+				- TomIsTheBestAtEverything(WhichIncludesDragons) [To view their website, click <a href="https://example.com" target="_blank">here</a>.] <p>
+			</h4>
+		<center>
+  	</body>
 </html>
