--- a/contributors/index.html
+++ b/contributors/index.html
@@ -39,27 +39,27 @@
 	<body>
 		<ul>
 			<li>
-				<a class="active" href="https://hydronesiumscratch.github.io/">
+				<a href="https://hydronesiumscratch.github.io/">
 					Home
 				</a>
 			</li>
 			<li>
-				<a href="datachart/">
+				<a href="https://hydronesiumscratch.github.io/datachart/">
 					Data chart
 				</a>
 			</li>
 			<li>
-				<a href="hydredu/">
+				<a href="https://hydronesiumscratch.github.io/hydredu/">
 					hydreducation
 				</a>
 			</li>
 			<li>
-				<a href="Game/">
+				<a href="https://hydronesiumscratch.github.io/Game/">
 					JavaScript game
 				</a>
 			</li>
 			<li>
-				<a href="contributors/">
+				<a class="active" href="https://hydronesiumscratch.github.io/contributors/">
 					Contributors
 				</a>
 			</li>
