--- a/hydredu/index.html
+++ b/hydredu/index.html
@@ -9,32 +9,61 @@
 			background-color: #222222;
 			color: #eeeeee;
 		}
-		
-		/* unvisited link */
-		a:link {
-		    color: #cccc00;
+		ul {
+			list-style-type: none;
+			margin: 0;
+			padding: 0;
+			overflow: hidden;
+			background-color: #333333;
+			position: fixed;
+			top: 0;
+			width: 100%;
 		}
-		
-		/* visited link */
-		a:visited {
-		    color: #999900;
+		li {
+		    	float: left;
 		}
-		
-		/* mouse over link */
-        	a:hover {
-		    color: #0000dd;
+		li a {
+		    	display: block;
+		    	color: white;
+		    	text-align: center;
+		    	padding: 14px 16px;
+		    	text-decoration: none;
 		}
-		
-		/* selected link */
-		a:active {
-		    color: #006400;
+		li a:hover:not(.active) {
+		    	background-color: #111111;
 		}
-		
-		h4 {
-		    background-colour: #555511;
+		.active {
+		    	background-color: #4CAF50;
 		}
 	</style>
 	<body>
+		<ul>
+  			<li>
+				<a href="https://hydronesiumscratch.github.io/">
+					Home
+				</a>
+			</li>
+  			<li>
+				<a href="https://hydronesiumscratch.github.io/datachart/">
+					Data chart
+				</a>
+			</li>
+  			<li>
+				<a class="active" href="https://hydronesiumscratch.github.io/hydredu/">
+					hydreducation
+				</a>
+			</li>
+  			<li>
+				<a href="https://hydronesiumscratch.github.io/Game/">
+					JavaScript game
+				</a>
+			</li>
+			  <li>
+				<a href="https://hydronesiumscratch.github.io/contributors/">
+					Contributors
+				</a>
+			</li>
+		</ul>
 		<center>
     			<p>
 				<h1>
