--- a/hydredu/index.html
+++ b/hydredu/index.html
@@ -64,19 +64,22 @@
 				</a>
 			</li>
 		</ul>
+		<ul>
+  			<li>
+				<a href="https://hydronesiumscratch.github.io/hydredu/Bio/">
+					Biology
+				</a>
+			</li>
+		</ul>
+
 		<center>
     			<p>
 				<h1>
 					hydreducation - hydronesium education
 				</h1>
 				<h3>
-					Click a hyperlink below to see other, closely linked, pages.
+					Click a hyperlink above to see other, closely linked, pages.
 				</h3>
-				<h4>
-					<a href="Bio/">
-						Biology
-					</a>
-				</h4>
 			</p>
 		</center>
 	</body>
