--- a/hydredu/index.html
+++ b/hydredu/index.html
@@ -35,6 +35,16 @@
 		.active {
 		    	background-color: #4CAF50;
 		}
+		.sub {
+			list-style-type: none;
+			margin: 0;
+			padding: 0;
+			overflow: hidden;
+			background-color: #333333;
+			position: fixed;
+			top: 1;
+			width: 100%;
+		}
 	</style>
 	<body>
 		<ul>
@@ -64,7 +74,7 @@
 				</a>
 			</li>
 		</ul>
-		<ul>
+		<ul class="sub">
   			<li>
 				<a href="https://hydronesiumscratch.github.io/hydredu/Bio/">
 					Biology
@@ -73,14 +83,12 @@
 		</ul>
 
 		<center>
-    			<p>
 				<h1>
 					hydreducation - hydronesium education
 				</h1>
 				<h3>
 					Click a hyperlink above to see other, closely linked, pages.
 				</h3>
-			</p>
 		</center>
 	</body>
 </html>
