--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 	<body>
 		<ul>
   			<li>
-				<a href="https://hydronesiumscratch.github.io/">
+				<a class="active" href="https://hydronesiumscratch.github.io/">
 					Home
 				</a>
 			</li>
@@ -49,7 +49,7 @@
 				</a>
 			</li>
   			<li>
-				<a class="active" href="https://hydronesiumscratch.github.io/hydredu/">
+				<a href="https://hydronesiumscratch.github.io/hydredu/">
 					hydreducation
 				</a>
 			</li>
