--- a/Game/index.html
+++ b/Game/index.html
@@ -190,8 +190,12 @@
 		<button onmousedown="accelerate(-0.2)" onmouseup="accelerate(0.05)">
 			JUMP
 		</button>
+		<button onmousedown="javascript:history.go(0)">
+			REPLAY
+		</button>
 		<p>
 			Use the JUMP button to stay in the air
+			Use the REPLAY button to play again
 		</p>
 		<p>
 			How long can you stay alive?
