--- a/Game/index.html
+++ b/Game/index.html
@@ -6,11 +6,11 @@
 	canvas {
 		border:1px solid #d3d3d3;
 		background-color: #f1f1f1;
-		top: 50
 	}
 	body {
 		background-color: #222222;
 		color: #eeeeee;
+		top: 60;
 	}
 	ul {
 		list-style-type: none;
