--- a/index.html
+++ b/index.html
@@ -58,9 +58,14 @@
 					JavaScript game
 				</a>
 			</li>
-			  <li>
+			<li>
 				<a href="https://hydronesiumscratch.github.io/contributors/">
 					Contributors
+				</a>
+			</li>
+			<li>
+				<a href="https://hydronesiumscratch.github.io/htmltesting/">
+					Test your HTML
 				</a>
 			</li>
 		</ul>
