--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 	<body>
 		<ul>
   			<li>
-				<a class="active" href="https://hydronesiumscratch.github.io/">
+				<a class="active" href="https://hydronesiumscratch.github.io/index.html">
 					Home
 				</a>
 			</li>
