--- a/hydredu/index2.html
+++ b/hydredu/index2.html
@@ -27,51 +27,17 @@
           </span>
         </button>
         <ul class="dropdown-menu">
-          <li>
-            <a tabindex="-1" href="#">
-              HTML
-            </a>
-          </li>
-          <li>
-            <a tabindex="-1" href="#">
-              CSS
-            </a>
-          </li>
           <li class="dropdown-submenu">
-            <a class="test" tabindex="-1" href="#">
-              New dropdown
+            <a class="test" tabindex="-1">
+              Biology
               <span class="caret">
               </span>
             </a>
             <ul class="dropdown-menu">
               <li>
                 <a tabindex="-1" href="#">
-                  2nd level dropdown
+                  Genetic modification
                 </a>
-              </li>
-              <li>
-                <a tabindex="-1" href="#">
-                  2nd level dropdown
-                </a>
-              </li>
-              <li class="dropdown-submenu">
-                <a class="test" href="#">
-                  Another dropdown
-                  <span class="caret">
-                  </span>
-                </a>
-                <ul class="dropdown-menu">
-                  <li>
-                    <a href="#">
-                      3rd level dropdown
-                    </a>
-                  </li>
-                  <li>
-                    <a href="#">
-                      3rd level dropdown
-                    </a>
-                  </li>
-                </ul>
               </li>
             </ul>
           </li>
