--- a/hydredu/index2.html
+++ b/hydredu/index2.html
@@ -35,7 +35,7 @@
             </a>
             <ul class="dropdown-menu">
               <li>
-                <a tabindex="-1" href="#">
+                <a tabindex="-1" href="https://hydronesiumscratch.github.io/hydredu/Bio/GeneticModification/">
                   Genetic modification
                 </a>
               </li>
