--- a/hydredu/index2.html
+++ b/hydredu/index2.html
@@ -10,12 +10,42 @@
     .dropdown-submenu {
         position: relative;
     }
-
     .dropdown-submenu .dropdown-menu {
         top: 0;
         left: 100%;
         margin-top: -1px;
     }
+    
+    body {
+			background-color: #222222;
+			color: #eeeeee;
+		}
+		ul {
+			list-style-type: none;
+			margin: 0;
+			padding: 0;
+			overflow: hidden;
+			background-color: #333333;
+			position: fixed;
+			top: 0;
+			width: 100%;
+		}
+		li {
+		    	float: left;
+		}
+		li a {
+		    	display: block;
+		    	color: white;
+		    	text-align: center;
+		    	padding: 14px 16px;
+		    	text-decoration: none;
+		}
+		li a:hover:not(.active) {
+		    	background-color: #111111;
+		}
+		.active {
+		    	background-color: #4CAF50;
+		}
   </style>
   
   <body>
