--- a/hydredu/index2.html
+++ b/hydredu/index2.html
@@ -11,66 +11,66 @@
       	position: relative;
     }
     .dropdown-submenu .dropdown-menu {
-       	top: 100;
+       	top: 50;
        	left: 100%;
        	margin-top: -1px;
     }
     
   	body {
-			background-color: #222222;
-			color: #eeeeee;
+        background-color: #222222;
+			  color: #eeeeee;
 		}
 		ul(.nav) {
-			list-style-type: none;
-			margin: 0;
-			padding: 0;
-			overflow: hidden;
-			background-color: #333333;
-			position: fixed;
-			top: 0;
-			width: 100%;
+        list-style-type: none;
+        margin: 0;
+		    padding: 0;
+		    overflow: hidden;
+		    background-color: #333333;
+		    position: fixed;
+		    top: 0;
+		    width: 100%;
 		}
-		li {
-					float: left;
+		li(.nav) {
+		    float: left;
 		}
-		li a {
-					display: block;
-					color: white;
-					text-align: center;
-					padding: 14px 16px;
-					text-decoration: none;
+		li(.nav) a{
+				display: block;
+				color: white;
+				text-align: center;
+				padding: 14px 16px;
+				text-decoration: none;
 		}
-		li a:hover:not(.active) {
-					background-color: #111111;
+		li(.nav) a:hover:not(.active) {
+				background-color: #111111;
 		}
 		.active {
-					background-color: #4CAF50;
+				background-color: #4CAF50;
 		}
   </style>
   
   <body>
 		<ul class="nav">
-			<li>
+			<li class="nav">
 				<a href="https://hydronesiumscratch.github.io/">
 					Home
 				</a>
 			</li>
-				<li>
+			<li class="nav">
 				<a href="https://hydronesiumscratch.github.io/datachart/">
 					Data chart
 				</a>
 			</li>
-				<li>
+			<li class="nav">
 				<a class="active" href="https://hydronesiumscratch.github.io/hydredu/">
 					hydreducation
 				</a>
 			</li>
-				<li>
+			<li class="nav">
 				<a href="https://hydronesiumscratch.github.io/Game/">
 					JavaScript game
 				</a>
 			</li>
-				<li>
+			<li class="nav">
 				<a href="https://hydronesiumscratch.github.io/contributors/">
 					Contributors
 				</a>
