--- a/Game/index.html
+++ b/Game/index.html
@@ -1,6 +1,9 @@
 <html>
 	<head>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+		<title>
+			hydronesium - Flappy square
+		</title>
 	</head>
 	<style>
 	canvas {
