--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 				</a>
 			</li>
   			<li>
-				<a href="https://hydronesiumscratch.github.io/datachart/">
+				<a href="https://www.wu.ece.ufl.edu/links/dataRate/DataMeasurementChart.html">
 					Data chart
 				</a>
 			</li>
