--- a/index.html
+++ b/index.html
@@ -39,8 +39,13 @@
 	<body>
 		<ul>
   			<li>
-				<a class="active" href="https://hydronesiumscratch.github.io/index.html">
+				<a class="active" href="https://hydronesiumscratch.github.io/">
 					Home
+				</a>
+			</li>
+			<li>
+				<a href="https://hydronesiumscratch.github.io/contributors/">
+					Contributors
 				</a>
 			</li>
   			<li>
@@ -51,11 +56,6 @@
   			<li>
 				<a href="https://hydronesiumscratch.github.io/Game/">
 					JavaScript game
-				</a>
-			</li>
-			<li>
-				<a href="https://hydronesiumscratch.github.io/contributors/">
-					Contributors
 				</a>
 			</li>
 		</ul>
