--- a/contributors/jimbob123x.html
+++ b/contributors/jimbob123x.html
@@ -1,3 +1,80 @@
 <html>
-	
+	<head>
+	   	<title>  
+			hydronesium - Contributors
+		</title>
+	</head>
+	<style>
+		body {
+			background-color: #222222;
+			color: #eeeeee;
+		}
+		ul {
+			list-style-type: none;
+			margin: 0;
+			padding: 0;
+			overflow: hidden;
+			background-color: #333333;
+			position: fixed;
+			top: 0;
+			width: 100%;
+		}
+		li {
+		    	float: left;
+		}
+		li a {
+		    	display: block;
+		    	color: white;
+		    	text-align: center;
+		    	padding: 14px 16px;
+		    	text-decoration: none;
+		}
+		li a:hover:not(.active) {
+		    	background-color: #111111;
+		}
+		.active {
+		    	background-color: #4CAF50;
+		}
+	</style>
+	<body>
+		<ul>
+			<li>
+				<a href="https://hydronesiumscratch.github.io/">
+					Home
+				</a>
+			</li>
+			<li>
+				<a class="active" href="https://hydronesiumscratch.github.io/contributors/">
+					Contributors
+				</a>
+			</li>
+			<li>
+				<a href="https://hydronesiumscratch.github.io/hydredu/">
+					hydreducation
+				</a>
+			</li>
+			<li>
+				<a href="https://hydronesiumscratch.github.io/Game/">
+					JavaScript game
+				</a>
+			</li>
+		</ul>
+		<center>
+			<h1>
+				<br>
+				Contributors
+			</h1>
+			<h3>
+				All about jimbob123x
+			</h3>
+			<h4>
+				Website: <a href='#'>
+						[Doesn't exist]
+					</a>
+				Scratch profile: <a href='https://scratch.mit.edu/users/jimbob123x/'>
+						jimbob123x on Scratch
+					</a>
+			</h4>
+		<center>
+  	</body>
 </html>
