--- a/contributors/jimbob123x.html
+++ b/contributors/jimbob123x.html
@@ -68,10 +68,10 @@
 				All about jimbob123x
 			</h3>
 			<h4>
-				Website: <a href='#'>
+				Website: <a href="#">
 						[Doesn't exist]
 					</a>
-				Scratch profile: <a href='https://scratch.mit.edu/users/jimbob123x/'>
+				Scratch profile: <a href="https://scratch.mit.edu/users/jimbob123x/">
 						jimbob123x on Scratch
 					</a>
 			</h4>
