--- a/contributors/jimbob123x.html
+++ b/contributors/jimbob123x.html
@@ -75,6 +75,10 @@
 				Scratch profile: <a href="https://scratch.mit.edu/users/jimbob123x/">
 						jimbob123x on Scratch
 					</a>
+				<p>
+				Youtube account: <a href="#">
+						[Doesn't exist]
+					</a>
 			</h4>
 		<center>
   	</body>
