--- a/contributors/TomIsTheBestAtEverythingWhichIncludesDragons.html
+++ b/contributors/TomIsTheBestAtEverythingWhichIncludesDragons.html
@@ -71,7 +71,12 @@
 				Website: <a href="#">
 						[Doesn't exist]
 					</a>
+				<p>
 				Scratch profile: <a href="#">
+						[Doesn't exist]
+					</a>
+				<p>
+				YouTube account: <a href="#">
 						[Doesn't exist]
 					</a>
 			</h4>
