--- a/contributors/jimbob123x.html
+++ b/contributors/jimbob123x.html
@@ -76,7 +76,7 @@
 						jimbob123x on Scratch
 					</a>
 				<p>
-				Youtube account: <a href="#">
+				YouTube account: <a href="#">
 						[Doesn't exist]
 					</a>
 			</h4>
