--- a/contributors/index.html
+++ b/contributors/index.html
@@ -68,10 +68,10 @@
 				Here is the list of people who contributed to this website:
 			</h3>
 			<h4>
-				- hydronesium [To view their website, click <a href="https://hydronesiumscratch.github.io" target="_blank">here</a>.] <p>
-				- jimbob123x [To view their scratch account, click <a href="https://scratch.mit.edu/users/jimbob123x/" target="_blank">here</a>.] <p>
-				- EdJonez [To view their website, click <a href="https://example.com" target="_blank">here</a>.] <p>
-				- TomIsTheBestAtEverything(WhichIncludesDragons) [To view their website, click <a href="https://example.com" target="_blank">here</a>.] <p>
+				- hydronesium [<a href="https://hydronesiumscratch.github.io/contributors/hydronesium.html">Data</a>] <p>
+				- jimbob123x [<a href="https://hydronesiumscratch.github.io/contributors/jimbob123x.html">Data</a>] <p>
+				- EdJonez [<a href="https://hydronesiumscratch.github.io/contributors/EdJonez.html">Data</a>] <p>
+				- TomIsTheBestAtEverything(WhichIncludesDragons) [<a href="https://hydronesiumscratch.github.io/contributors/TomIsTheBestAtEverythingWhichIncludesDragons.html">Data</a>] <p>
 			</h4>
 		<center>
   	</body>
