--- a/Game/index.html
+++ b/Game/index.html
@@ -192,7 +192,7 @@
 			REPLAY
 		</button>
 		<p>
-			Use the JUMP button to stay in the air
+			Use the JUMP button to stay in the air<p>
 			Use the REPLAY button to play again
 		</p>
 		<p>
