--- a/Game/index.html
+++ b/Game/index.html
@@ -61,7 +61,7 @@
 			</li>
 			<li>
 				<a class="active" href="https://hydronesiumscratch.github.io/Game/">
-					JavaScript game
+					Flappy square
 				</a>
 			</li>
 		</ul>
