--- a/hydredu/index2.html
+++ b/hydredu/index2.html
@@ -70,11 +70,11 @@
 			</li>
 			<li class="nav">
 				<a href="https://hydronesiumscratch.github.io/Game/">
-					JavaScript game
+					Flappy square
 				</a>
 			</li>
 		</ul>
-
+		<br>
 		<div class="container">
 			<div class="dropdown">
 				<button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown">
