--- a/contributors/index.html
+++ b/contributors/index.html
@@ -68,10 +68,10 @@
 				Here is the list of people who contributed to this website:
 			</h3>
 			<h4>
-				- hydronesium [<a href="https://hydronesiumscratch.github.io/contributors/hydronesium.html">Data</a>] <p>
-				- jimbob123x [<a href="https://hydronesiumscratch.github.io/contributors/jimbob123x.html">Data</a>] <p>
-				- EdJonez [<a href="https://hydronesiumscratch.github.io/contributors/EdJonez.html">Data</a>] <p>
-				- TomIsTheBestAtEverything(WhichIncludesDragons) [<a href="https://hydronesiumscratch.github.io/contributors/TomIsTheBestAtEverythingWhichIncludesDragons.html">Data</a>] <p>
+				- hydronesium [<a href="https://hydronesiumscratch.github.io/contributors/hydronesium.html">Data</a>] <br>
+				- jimbob123x [<a href="https://hydronesiumscratch.github.io/contributors/jimbob123x.html">Data</a>] <br>
+				- EdJonez [<a href="https://hydronesiumscratch.github.io/contributors/EdJonez.html">Data</a>] <br>
+				- TomIsTheBestAtEverything(WhichIncludesDragons) [<a href="https://hydronesiumscratch.github.io/contributors/TomIsTheBestAtEverythingWhichIncludesDragons.html">Data</a>] <br>
 			</h4>
 		<center>
   	</body>
