--- a/QandA/index.html
+++ b/QandA/index.html
@@ -39,7 +39,7 @@
 
 <?php
   if($_POST['Submit']){
-    print "<h1>Your comment has been submitted!</h1>";
+    echo "<h1>Your comment has been submitted!</h1>";
     $Name = $_POST['Name'];
     $Comment = $_POST['Comment'];
     #Get old comments
