--- a/QandA/index.html
+++ b/QandA/index.html
@@ -22,7 +22,7 @@
     }
   </style>
   <body>
-    <form action="" method="POST">
+    <form action="process.php" method="POST">
       <label> Name: 
         <input type="text" name="Name" class="Input" style="width: 225px" required>
       </label>
@@ -35,26 +35,3 @@
     </form>
   </body>
 </html>
-
-
-<?php
-  if($_POST['Submit']){
-    echo "<h1>Your comment has been submitted!</h1>";
-    $Name = $_POST['Name'];
-    $Comment = $_POST['Comment'];
-    #Get old comments
-    $old = fopen("comments.txt", "r+t");
-    $old_comments = fread($old, 1024);
-    #Delete everything, write down new and old comments
-    $write = fopen("comments.txt", "w+");
-    $string = "<b>".$Name."</b><br>".$Comment."<br>\n".$old_comments;
-    fwrite($write, $string);
-    fclose($write);
-    fclose($old);
-  }
-
-  #Read comments
-  $read = fopen("comments.txt", "r+t");
-  echo "<br><br>Comments<hr>".fread($read, 1024);
-  fclose($read);
-?>
