--- a/QandA/index.html
+++ b/QandA/index.html
@@ -1,6 +1,8 @@
 <html>
   <head>
-    <link rel="stylesheet" href="style.css" type="text/css">
+    <title>
+      Q%A
+    </title>
   </head>
   <style>
     body{
