--- a/QandA/index.html
+++ b/QandA/index.html
@@ -24,7 +24,7 @@
     }
   </style>
   <body>
-    <form action="process.php" method="POST">
+    <form action="process.php" method="GET">
       <label> Name: 
         <input type="text" name="Name" class="Input" style="width: 225px" required>
       </label>
