--- a/QandA/index.html
+++ b/QandA/index.html
@@ -5,7 +5,89 @@
     </title>
   </head>
   <style>
+		body {
+			background-color: #222222;
+			color: #eeeeee;
+		}
+		ul {
+			list-style-type: none;
+			margin: 0;
+			padding: 0;
+			overflow: hidden;
+			background-color: #333333;
+			position: fixed;
+			top: 0;
+			width: 100%;
+		}
+		li {
+		    	float: left;
+		}
+		li a {
+		    	display: block;
+		    	color: white;
+		    	text-align: center;
+		    	padding: 14px 16px;
+		    	text-decoration: none;
+		}
+		li a:hover:not(.active) {
+		    	background-color: #111111;
+		}
+		.active {
+		    	background-color: #4CAF50;
+		}
   </style>
   <body>
+		<ul>
+  			<li>
+				<a class="active" href="https://hydronesiumscratch.github.io/">
+					Home
+				</a>
+			</li>
+			<li>
+				<a href="https://hydronesiumscratch.github.io/contributors/">
+					Contributors
+				</a>
+			</li>
+  			<li>
+				<a href="https://hydronesiumscratch.github.io/hydredu/">
+					hydreducation
+				</a>
+			</li>
+  			<li>
+				<a href="https://hydronesiumscratch.github.io/Game/">
+					Flappy square
+				</a>
+			</li>
+		</ul>
+		<center>
+			<h1>
+				<br>
+				Q&A section
+			</h1>
+		</center>
+    <p>
+	  <h3>
+		  <b>
+        What programming languages did you use to make this website? And which one do you think is easier to code in?
+      </b>
+      <br>
+      I used HTML, CSS and JavaScript. (Especially JavaScript for the 'Flappy square' game)<br>
+      Hmmm... I think that HTML has lots of quick and easy-to-use tags, but I'm gonna have to go with CSS.
+      <p>
+      <b>
+        What is your favourite programming language in general?
+      </b>
+      <br>
+      When I saw this question, I thought to myself "Oh no! They asked the unanswerable 'favourite' question! What am I going to do now?". So, in other words, all of the ones I know (including: Scratch, Python, CSS, HTML, Batch files, along with many others...) because I think that all programming languages are good and special in their own way.
+      <br>
+      Just having looked at what I just wrote, I feel so cringey.
+      <p>
+      <b>
+        Who are you?
+      </b>
+      <br>
+      I am hydronesium. I am saying my username because I am very protective about sharing personal details on the internet. And also I don't want identity-frauders to steal who I am... (Note to those people: "Haha! You can't catch me!")
+      <p>
+    </h3>
   </body>
 </html>
