--- a/QandA/index.html
+++ b/QandA/index.html
@@ -75,7 +75,7 @@
 			What programming languages did you use to make this website? And which one do you think is easier to code in?
 		</div>
 		I used HTML, CSS and JavaScript. (Especially JavaScript for the 'Flappy square' game)<br>
-		Hmmm... I think that HTML has lots of quick and easy-to-use tags, but I'm gonna have to go with CSS.
+		Hmmm... I think that HTML has lots of quick and easy-to-use tags, but I'm gonna have to go with CSS to be the easiest language to code in.
 		<p>
 		
 		<div class="Q">
