--- a/contributors/hydronesium.html
+++ b/contributors/hydronesium.html
@@ -65,7 +65,7 @@
 				Contributors
 			</h1>
 			<h3>
-				All about jimbob123x
+				All about me, hydronesium
 			</h3>
 			<h4>
 				Website: <a href="https://hydronesiumscratch.github.io">
