--- a/contributors/jimbob123x.html
+++ b/contributors/jimbob123x.html
@@ -79,6 +79,9 @@
 				YouTube account: <a href="#">
 						[Doesn't exist]
 					</a>
+				Github: <a href="https://github.com/jimbob123x">
+						jimbob123x
+					</a>
 			</h4>
 		<center>
   	</body>
