--- a/contributors/hydronesium.html
+++ b/contributors/hydronesium.html
@@ -79,6 +79,9 @@
 				YouTube account: <a href="https://www.youtube.com/channel/UCosxKKKPJk4aZlwF_EFe2pw">
 						hydronesium - YouTube
 					</a>
+				Github: <a href="https://github.com/hydronesiumScratch">
+						hydronesiumScratch
+					</a>
 			</h4>
 		<center>
   	</body>
