--- a/scratchblocks/index.html
+++ b/scratchblocks/index.html
@@ -70,7 +70,7 @@
 				<br>
 				Scratchblocks (I made them myself!)
 			</h1>
-    			<img src="WithPython.png" alt="Scratchblocks: picture 1" />
+    			<img src="WithPython1.jpg" alt="Scratchblocks: picture 1" />
     			<p>
 		</center>
 	</body>
