--- a/index.html
+++ b/index.html
@@ -37,28 +37,8 @@
 		}
 	</style>
 	<body>
-		<ul>
-  			<li>
-				<a class="active" href="https://hydronesiumscratch.github.io/">
-					Home
-				</a>
-			</li>
-			<li>
-				<a href="https://hydronesiumscratch.github.io/contributors/">
-					Contributors
-				</a>
-			</li>
-  			<li>
-				<a href="https://hydronesiumscratch.github.io/hydredu/">
-					hydreducation
-				</a>
-			</li>
-  			<li>
-				<a href="https://hydronesiumscratch.github.io/Game/">
-					Flappy square
-				</a>
-			</li>
-		</ul>
+		<script src="https://hydronesiumscratch.github.io/src/navbar.html">
+		</script>
 		<center>
 			<h1>
 				<br>
