--- a/index.html
+++ b/index.html
@@ -9,36 +9,9 @@
 			background-color: #222222;
 			color: #eeeeee;
 		}
-		ul {
-			list-style-type: none;
-			margin: 0;
-			padding: 0;
-			overflow: hidden;
-			background-color: #333333;
-			position: fixed;
-			top: 0;
-			width: 100%;
-		}
-		li {
-		    	float: left;
-		}
-		li a {
-		    	display: block;
-		    	color: white;
-		    	text-align: center;
-		    	padding: 14px 16px;
-		    	text-decoration: none;
-		}
-		li a:hover:not(.active) {
-		    	background-color: #111111;
-		}
-		.active {
-		    	background-color: #4CAF50;
-		}
 	</style>
 	<body>
-		<script src="https://hydronesiumscratch.github.io/src/navbar.html">
-		</script>
+		<iframe src="hydronesiumscratch.github.io/src/navbar.html" class="navbar" />
 		<center>
 			<h1>
 				<br>
