--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
 		}
 	</style>
 	<body>
-		<iframe src="hydronesiumscratch.github.io/src/navbar.html" class="navbar" />
+		<script type="text/javascript">
+			$(document).ready(function() {
+				$('#nav-container').load('https://hydronesiumscratch.github.io/src/navbar.html');
+			});
+		</script>
 		<center>
 			<h1>
 				<br>
