--- a/src/navbar.html
+++ b/src/navbar.html
@@ -1,8 +1,4 @@
 <style>
-    body {
-        background-color: #222222;
-        color: #eeeeee;
-    }
     ul {
         list-style-type: none;
         margin: 0;
@@ -26,28 +22,28 @@
     li a:hover:not(.active) {
         background-color: #111111;
     }
-    .active {
+    .home {
         background-color: #4CAF50;
     }
 </style>
 <ul>
     <li>
-        <a class="active" href="https://hydronesiumscratch.github.io/">
+        <a class="home" href="https://hydronesiumscratch.github.io/">
             Home
         </a>
     </li>
     <li>
-        <a href="https://hydronesiumscratch.github.io/contributors/">
+        <a class="contrib" href="https://hydronesiumscratch.github.io/contributors/">
             Contributors
         </a>
     </li>
     <li>
-        <a href="https://hydronesiumscratch.github.io/hydredu/">
+        <a class="hydredu" href="https://hydronesiumscratch.github.io/hydredu/">
             hydreducation
         </a>
     </li>
     <li>
-        <a href="https://hydronesiumscratch.github.io/Game/">
+        <a class="game" href="https://hydronesiumscratch.github.io/Game/">
             Flappy square
         </a>
     </li>
