--- a/contributors/EdJonez.html
+++ b/contributors/EdJonez.html
@@ -68,20 +68,24 @@
 				All about EdJonez
 			</h3>
 			<h4>
-				Website: <a href="#">
-						[Doesn't exist]
+				Website: <a href="http://169.254.41.148/a/">
+						[Non-public Raspberry Pi server]
 					</a>
 				<br>
 				Scratch profile: <a href="#">
 						[Doesn't exist]
 					</a>
 				<br>
-				YouTube account: <a href="#">
+				<span style="text-decoration: line-through;">YouTube</span>Google account:
+				<a href="">
 						[Doesn't exist]
 					</a>
 				Github: <a href="#">
 						[Doesn't exist]
-					</a>
+					</a>				
+                                <br>Hello, I identify as Edward.<br>
+I don't know much about Github and revision control systems but I've coded my own website.<br>
+I don't take GCSE Computing (will do A level) but<br>I'm a programmer who's skilled with computers.
 			</h4>
 		</center>
   	</body>
