--- a/contributors/EdJonez.html
+++ b/contributors/EdJonez.html
@@ -74,7 +74,7 @@
 						[Non-public Raspberry Pi server]
 					</a>
 				<br>
-				Scratch profile (2 years ago): <a href="https://scratch.mit.edu/users/user-e/">
+				Scratch profile: <a href="https://scratch.mit.edu/users/user-e/">
 						[user-e]
 					</a>
 				<br>
